# game_music_emu

./: .gitmodules  CMakeLists.txt
cmake/: Game_Music_EmuConfig.cmake.in  libgme.pc.in
gme/: Gme_Loader.h  M3u_Playlist.h  Nes_Namco_Apu.cpp  Rom_Data.h  Spc_Emu.cpp  Spc_Sfm.cpp  Vgm_Emu.cpp  blargg_common.h  blargg_source.h  gme.cpp  gme.h
gme/higan/dsp/: SPC_DSP.cpp  SPC_DSP.h
msvc/: Game_Music_Emu.vcxproj
